pielang/src/snapshots/pielang__test__check_synthesize_(zero 0).snap
---
source: pielang/src/test.rs
description: (zero 0)
expression: output
---
Error: 1:5: zero cannot be caller
