pielang/src/snapshots/pielang__test__check_synthesize_(Σ ((zero Nat)) Nat).snap
---
source: pielang/src/test.rs
description: (Σ ((zero Nat)) Nat)
expression: output
---
Error: 6:10: zero is not a valid Pie name
