pielang/src/snapshots/pielang__test__check_synthesize_(λ (Nat) 0).snap
---
source: pielang/src/test.rs
description: (λ (Nat) 0)
expression: output
---
Error: 5:8: Nat is not a valid Pie name
