pielang/src/snapshots/pielang__test__check_synthesize_(λ (x) add1).snap
---
source: pielang/src/test.rs
description: (λ (x) add1)
expression: output
---
Error: 8:12: add1 need 1 arguments
