pielang/src/snapshots/pielang__test__check_synthesize_(λ (x) y).snap
---
source: pielang/src/test.rs
description: (λ (x) y)
expression: output
---
Error: 8:9: undefined identifier: y
