pielang/src/snapshots/pielang__test__check_synthesize_add1.snap
---
source: pielang/src/test.rs
description: add1
expression: output
---
Error: 0:4: add1 need 1 arguments
