pielang/src/snapshots/pielang__test__check_synthesize_x.snap
---
source: pielang/src/test.rs
description: x
expression: output
---
Error: 0:1: undefined identifier: x
