pielang/src/snapshots/pielang__test__parse_expression_'  btom.snap
---
source: pielang/src/test.rs
description: "'  btom"
expression: parser.parse(e)
---
Ok(
    AtomLit(
        Span(
            0,
            7,
        ),
        "btom",
    ),
)
