pielang/src/snapshots/pielang__test__parse_expression_'a-.snap
---
source: pielang/src/test.rs
description: "'a-"
expression: parser.parse(e)
---
Ok(
    AtomLit(
        Span(
            0,
            3,
        ),
        "a-",
    ),
)
